derive_builder/tests/compile-fail/builder_setter_attrs.stderr
error: unused return value of `LoremBuilder::broken` that must be used
  --> tests/compile-fail/builder_setter_attrs.rs:16:5
   |
16 |     LoremBuilder::default().broken(42);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> tests/compile-fail/builder_setter_attrs.rs:1:9
   |
1  | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
